# DES_Head-Unit

./: .gitignore  Dockerfile  a.sh
Head-Unit/: CMakeLists.txt  main.cpp  spotify.cpp  spotify.h
apps/HeadUnit/: CMakeLists.txt  Main.qml  main.cpp
apps/HeadUnit/modules/bluetooth/: test.cpp
apps/HeadUnit/shared/utils/: someip.cpp  someip.h
